# codehound

./: .gitattributes  .gitignore  CHANGELOG.md  CHUNK_VALIDATOR.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  benchmarks.md  build.rs  codehound-baseline.schema.json  codehound.schema.json  codehound.toml  makefile  slopguard-baseline.schema.json  slopguard.schema.json  slopguard.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/: dependabot.yml
.github/workflows/: ci.yml  codehound.yml  release.yml
benches/: incremental_partial_scan.rs  incremental_scan.rs  scan_throughput.rs  span_sweep.rs  taint_graph.rs
benches/common/: mod.rs
docs/: adding-a-language.md  architecture-performance.md  bad-practices.md  configuration.md  finding-identity.md  go-recommended-pack.md  go-vs-staticcheck.md  incremental-cache.md  index.html  output-formats.md  perf-detector-development.md  perf-rules.md  taint.md
docs/adr/: 0003-taint-model.md  0004-default-profile.md  0005-multi-lang-honesty.md
docs/assets/: index-6-ZkElD3.css  index-B-ntgPOI.css  index-BJ0jFPpF.js  index-Bs0BK4n3.js  index-D989uuny.css  index-DLAd5aiI.js  index-DdxOSfPk.css  index-DthodhS2.js  index-HuahlGMk.css  index-L9JhlS3L.js  index-SBzj8xb1.css  index-VZrlskK9.js  index-ZLMxBcZ0.js  index-bcnq76eR.js  index-et35_8hH.js  index-n_52OtEn.js
docs/impact-created/: GOPDFSUIT_SLOPGUARD_PERFORMANCE_IMPACT_REPORT.md  devto_slopguard_article.md  slopguard-findings.md
documents/: adding-a-language.md  architecture-performance.md  bad-practices.md  configuration.md  finding-identity.md  go-recommended-pack.md  go-vs-staticcheck.md  incremental-cache.md  perf-rules.md  perf-tiers.md  rule-rfc-template.md  taint.md
documents/adr/: 0001-hash-maps-on-hot-path.md  0002-project-path-identity.md  0003-taint-model.md  0004-default-profile.md
documents/impact-created/: devto_slopguard_article.md
examples/: finding.rs  library_scan.rs
frontend/: README.md  index.html  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
plans/: README.md  bad-practices-scope.md  consolidated_pendingtask_02072026.md  linux-binary-build-and-usage.md  p1.md  p1f-inter-procedural-taint.md  p1f-phase6-edge-cases.md  p2-hygiene-subplan.md  p2-remaining-work.md  p2.md  p3.md  perf-batch-4.md  perf-category-breakdown.md  pr-summary-modular-architecture.md  taint-tracking-architecture.md
plans/PR/: COMMENT_TEMPLATE.md  ISSUE_TEMPLATE.md  PR_TEMPLATE.md  issue-export-context-unavailable-body.md  pr-cwe-trust-phase4.md  pr-cwe-trust-tranche5.md  pr-epic-44-integration.md  pr-export-context-unavailable.md  pr-performance-parallel-scan.md  pr-refactor-go-cwe-and-add-perf-plan.md  pr-summary-modular-architecture.md
plans/feedback/: PR.md  improvements.md  rust.md  ultra-senior-go-rust-product-review.md
plans/p2-implementation/: 01-taint-tracking.md  02-baseline-ignore.md  03-incremental-analysis.md  04-perf-detector-implementation.md  05-bad-practices-detection.md  README.md  missing-A-source-cache-population.md  missing-B-structured-finding-identity.md  missing-C-detector-output-model.md  missing-D-rule-pack-extensibility.md  missing-E-observability-instrumentation.md
plans/v0.0.1/: PERF_Heuristic-1.md  PERF_Heuristic-2.md  TODO-2026-06-05-session2.md  additional-architecture-performance-findings.md  architecture-performance-review-2026-06-05.md
plans/v0.0.2/: 02-ruleset-split-and-perf-213-224.md  consolidated_pendingtask_02072026.md  consolidated_pendingtask_05072026.md  implement-fix.md  p1f-inter-procedural-taint.md  p1f-phase6-edge-cases.md  p2-executive-summary.md  p2-hygiene-subplan.md  p2-remaining-work.md  perf-category-breakdown.md  plan-improvements-06072026.md
plans/v0.0.3/: README.md  executive-summary.md  pending-work_v3.0.0.md  performance_analysis.md  rust_audit_report.md
plans/v0.0.4/: PR.md  README.md  cold-scan-performance.md  quality-gate.md
plans/v0.0.5/: 22072026.md  bp-71-canary.md  bp-candidates-disposition.md  bp-proof-boundary-notes.md  canary-corpus-pins.json  canary-corpus.md  canary-hit-rates.md  cwe-catalog-trust-45.md  cwe-catalog-trust-audit.md  cwe-catalog-trust-next.md  cwe-file-permissions-canary.md  cwe-file-permissions-evidence.md  cwe-file-permissions-trust.md  evidence-cwe-trust-concurrency-residual.md  evidence-cwe-trust-configuration-residual.md  evidence-cwe-trust-credential-lifecycle.md  evidence-cwe-trust-password-storage.md  noise-reduce-1.md  parallel-catalog-program.md  pending-work.md  perf-budget-48.md  perf-eval-decision.md  phase5-g1-bp-reopen-evidence.md  phase5-g2-cwe-277-reopen-evidence.md  phase5-g3-fo-residual-plan.md  phase5-g4-typed-go-gate-eval.md  phase5-g5-taint-ceiling-eval.md  phase5-g6-python-gate-eval.md  phase5-gated-work.md  phase5-implementation-backlog.md  pr-arch-bp-scan-scoped.md  (+48 more)
scripts/: check_bench_budget.sh  check_codehound_scan_action_contract.sh  check_incremental_bench_budget.sh  check_module_size.sh  check_no_box_leak.sh  check_no_prod_expect.sh  findings_report.csv  split-ruleset.py
src/: app.rs  error.rs  lib.rs  main.rs
templates/: codehound.toml  slopguard.toml
tests/: app_baseline.rs  app_baseline_corrupt.rs  app_baseline_disable.rs  app_baseline_filter.rs  app_inline_ignore.rs  app_inline_ignore_file.rs  app_inline_ignore_inline.rs  ast_location.rs  ast_walk.rs  ast_walk_go.rs  ast_walk_python.rs  cli_baseline.rs  cli_output_contract.rs  cli_rules_explain.rs  config_init_template.rs  config_languages_integration.rs  core_unit.rs  cwe_catalog.rs  engine_baseline.rs  engine_baseline_io.rs  engine_baseline_store.rs  engine_cache.rs  engine_cache_concurrent.rs  engine_cache_debug.rs  engine_cache_inline_ignore.rs  engine_cache_invalidation.rs  engine_cache_scan.rs  engine_cache_session.rs  engine_cache_store.rs  engine_config.rs  engine_config_cli_filters.rs  engine_config_merge.rs  engine_config_parsing.rs  engine_embedder_seams.rs  engine_entry_source.rs  engine_file_ignore.rs  engine_ignore.rs  engine_inline_ignore.rs  engine_language_filter.rs  engine_observability.rs  (+71 more)
v0.0.3/: codex-review.md
(+2556 files in other folders)
