[package]
name = "codehound"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A static code analyzer for detecting performance bottlenecks and security weaknesses"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chinmay/codehound"
readme = "README.md"
keywords = ["static-analysis", "linter", "performance", "go", "security"]
categories = ["command-line-utilities", "development-tools::static-analysis"]

[lib]
name = "codehound"
path = "src/lib.rs"

[[bin]]
name = "codehound"
path = "src/main.rs"
required-features = ["cli"]

[features]
# Default: Go-first production pack. Python is opt-in (one experimental rule).
# See docs/adr/0005-multi-lang-honesty.md.
default = ["go", "terminal-output", "cli"]
cli = ["dep:clap"]
go = ["dep:tree-sitter-go"]
# Experimental: enables Python plugin + SLOP101 only (not a full Python SAST).
python = ["dep:tree-sitter-python"]
terminal-output = ["dep:colored"]

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "cargo", "env", "wrap_help"], optional = true }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Serde / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Tree-sitter grammars (gated by feature for slim builds)
tree-sitter = "0.25"
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }

# Parallel file scan
rayon = "1.10"

# Logging / output
colored = { version = "2.1", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Date/time (ISO 8601)
jiff = "0.2"

# Perfect hashing for sink/source registries
phf = { version = "0.11", features = ["macros"] }

# Path / file walking
walkdir = "2.5"
ignore = "0.4"

# Content hashing (incremental analysis cache)
sha2 = "0.10"

# Compile-time plugin registration
inventory = "0.3"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.41", features = ["yaml"] }
pretty_assertions = "1.4"
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"

[[bench]]
name = "scan_throughput"
harness = false

[[bench]]
name = "incremental_scan"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("go", "python", "terminal-output", "cli"))'] }

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
needless_collect = { level = "warn", priority = 5 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
